2000-10-25  Andreas Jaeger  <aj@suse.de>

	* sysdeps/generic/dl-cache.h (CACHEMAGIC_VERSION_NEW): Correct string.

2000-10-25  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/i386/fcntl.c (__libc_fcntl): When
	converting struct flock64 to struct flock and back, use fcntl commands
	which work on struct flock.

2000-10-25  Jakub Jelinek  <jakub@redhat.com>

	* math/test-misc.c (main): Only check modfl if NO_LONG_DOUBLE is not
	defined.
	* sysdeps/sparc/sparc32/fpu/libm-test-ulps: Update.
	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Update.

2000-10-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/arm/libm-test-ulps: Updated.

	* sysdeps/generic/dl-cache.h (CACHEMAGIC_VERSION_NEW): New value.

2000-10-25  Andreas Jaeger  <aj@suse.de>

	* elf/dl-load.c (_dl_map_object_from_fd): Remove unused variable.
	(_dl_map_object): Likewise.

2000-10-24  Paul Eggert  <eggert@twinsun.com>

	* time/strftime.c (my_strftime macro)
	[!defined _LIBC && HAVE_TZNAME && HAVE_TZSET]:
	When redefining, do it without args, so that it works even if
	emacs is defined and an extra argument is passed to my_stftime.
	(my_strftime function): When evaluating a subformat, pass
	ut_argument as well.

2000-10-24  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/ia64/Versions: Add pciconfig_read and
	pciconfig_write.

2000-10-25  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-cache.c (_dl_cache_verify_ptr): Correct test
	for files with new cache format.
	(_dl_load_cache_lookup): Add variable cache_data_size for size of the
	data.  Correctly report error if neither old not new signature is
	found. Little optimizations.
	Mostly based on a patch by Denis Zaitsev <zzz@cd-club.ru>.

	* elf/dl-close.c (_dl_close): Optimize a bit by optimizing out the
	nsearchlist variable.

2000-10-24  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-lookup.c (add_dependency): Fix test to check whether
	dependency already exists.