@@ -1,3 +1,9 @@
+2000-10-25  David Mosberger  <davidm@hpl.hp.com>
+
+	* sysdeps/unix/sysv/linux/ia64/profil-counter.h: Multiply slot
+	number by four to use bins of width 4 to get accurate
+	instruction-level profiling.
+
 2000-10-25  Andreas Jaeger  <aj@suse.de>
 
 	* sysdeps/generic/dl-cache.h (CACHEMAGIC_VERSION_NEW): Correct string.
